--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
     <header>
         <div class="left">
-            <h1><a href="./index.html"><img src="./images/logo.png" alt="CINESHOP"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo_w.png" alt="CINESHOP"></a></h1>
             <nav>
                 <ul>
                     <li><a href="#">ALL</a>
@@ -437,8 +437,8 @@
         </div>
         <div class="fnb_btm">
             <p>
-                회사명 : CJCGV (씨제이 씨지브이) (주) 대표자 : 허민회 주소 : 서울특별시 용산구 한강대로23길 55 (한강로3가)
-                사업자등록번호 : 104-81-45690 <a href="#">[사업자정보확인]</a> 통신판매업신고 : 제2017-서울용산-0662호 대표전화 : 1544-1122 이메일 : cgv_cineshop@cj.net 개인정보보호책임자 : <a href="#">조진호</a>
+                회사명 : CJCGV (씨제이 씨지브이) (주) 대표자 : 허민회 주소 : 서울특별시 용산구 한강대로23길 55 (한강로3가)<br>
+                사업자등록번호 : 104-81-45690 <a href="#">[사업자정보확인]</a> 통신판매업신고 : 제2017-서울용산-0662호 대표전화 : 1544-1122<br>이메일 : cgv_cineshop@cj.net 개인정보보호책임자 : <a href="#">조진호</a>
             </p>
             <p>COPYRIGHT ⓒ CGV 씨네샵. ALL RIGHTS RESERVED.</p>
         </div>
