--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <aside id="popup"><a href="#"><img src="./images/icon/ico_top.png" alt="위로가기"></a></aside>
+    <?php include('./header.php') ?>
     <!-- <header>
         <div class="left">
             <h1><a href="./index.html"><img src="./images/logo_w.png" alt="CINESHOP"></a></h1>
@@ -454,6 +455,7 @@
             <p>COPYRIGHT ⓒ CGV 씨네샵. ALL RIGHTS RESERVED.</p>
         </div>
     </footer>
+    <?php include('./footer.php') ?>
     <script src="./script/common.js"></script>
     <script src="./script/index.js"></script>
 </body>
