login & index 수정

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <div class="container">
                         <p class="imgCls"><img src="./images/main_bnr2.png" alt=""></p>
                         <p class="slide_txt">
+                            <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
                             <img src="./images/main_slide_txt2.png" alt="Disney lovely goods 특별한 순간을 더욱 아름답게 꾸며보세요!">
                             <!-- <em>Disney</em>
                             <span>lovely goods</span>
@@ -336,7 +337,7 @@
                         <em>5,000원</em>
                         <span>구매 가능!</span>
                     </p>
-                    <p>~ 9/30</p>
+                    <p>9월 초특가 혜택</p>
                 </div>
             </a>
         </section>
