--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     <span>CINESHOP 소개</span>
                     <span>오프라인 매장에서 다양한 상품들을 확인해보세요.</span>
                 </h2>
-                <a href="#">
+                <a href="./map.html">
                     <span>더보기</span>
                     <img src="./images/icon/ico_more.png" alt="">
                 </a>
