--- a/login.html
+++ b/login.html
@@ -107,6 +107,7 @@
         </div>
     </main>
     <?php include('./footer.php') ?>
+    <script src="./script/common.js"></script>
     <script src="./script/login.js"></script>
 </body>
 </html>
