product_all first

--- a/product_all.html
+++ b/product_all.html
@@ -17,95 +17,124 @@
 <body>
     <?php include('./header.php') ?>
     <main>
-        <section class="swiper_wrap best">
-            <h2>BEST</h2>
-            <div class="swiper" id="best_slide">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide slide1">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best1.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
-                            <p><a href="#" class="price">5,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide2">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best2.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">CGV 필름마크북 ver.4</a></h2>
-                            <p><a href="#" class="price">18,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide3">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best3.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 다이진 마그넷 세트</a></h2>
-                            <p><a href="#" class="price">27,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide4">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best4.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 입체 마그넷</a></h2>
-                            <p><a href="#" class="price">18,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide5">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best5.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 뱃지</a></h2>
-                            <p><a href="#" class="price">7,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide6">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best6.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">프렌즈 빈티지 노트</a></h2>
-                            <p><a href="#" class="price">5,000원</a></p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide7">
-                        <div class="box">
-                            <a href="#" class="item_img"><img src="./images/best7.jpg" alt=""></a>
-                            <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                        </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">포켓몬스터 랜덤뱃지</a></h2>
-                            <p><a href="#" class="price">10,000원</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-scrollbar"></div>
+        <section class="all_product">
+            <div class="category">
+                <a href="#">ALL</a>
+                <a href="#">WB</a>
+                <a href="#">DISNEY/PIXAR</a>
+                <a href="#">UNIVERSAL</a>
+                <a href="#">CINESHOP</a>
             </div>
         </section>
-        <section class="all_product">
-            <div class="title">
-                <div class="category">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+        <div class="swiper" id="best_slide">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide1">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best1.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
+                        <p><a href="#" class="price">5,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide2">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best2.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">CGV 필름마크북 ver.4</a></h2>
+                        <p><a href="#" class="price">18,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide3">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best3.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">스즈메의 문단속 다이진 마그넷 세트</a></h2>
+                        <p><a href="#" class="price">27,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide4">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best4.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">스즈메의 문단속 입체 마그넷</a></h2>
+                        <p><a href="#" class="price">18,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide5">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best5.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">스즈메의 문단속 뱃지</a></h2>
+                        <p><a href="#" class="price">7,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide6">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best6.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">프렌즈 빈티지 노트</a></h2>
+                        <p><a href="#" class="price">5,000원</a></p>
+                    </div>
+                </div>
+                <div class="swiper-slide slide7">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="./images/best7.jpg" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">포켓몬스터 랜덤뱃지</a></h2>
+                        <p><a href="#" class="price">10,000원</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-scrollbar"></div>
+        </div>
+        <section class="product_wrap">
+            <div class="product_t">
+                <div class="movie">
+                    <span>해리포터</span>
+                    <span>|</span>
+                    <span>프렌즈</span>
+                    <span>|</span>
+                    <span>배트맨</span>
+                    <span>|</span>
+                    <span>톰과 제리</span>
+                </div>
+                <select name="order" id="order">
+                    <option value="">최신순</option>
+                    <option value="">인기순</option>
+                    <option value="">리뷰순</option>
+                    <option value="">최고가</option>
+                    <option value="">최저가</option>
+                </select>
+            </div>
+            <div class="product_contents">
+                <div class="product1">
+                    <div class="box">
+                        <a href="#" class="item_img"><img src="#" alt=""></a>
+                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                    </div>
+                    <div class="txt">
+                        <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
+                        <p><a href="#" class="price">5,000원</a></p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <?php include('./footer.php') ?>
+    <script src="./script/common.js"></script>
 </body>
 </html>
