--- a/product_all.html
+++ b/product_all.html
@@ -13,13 +13,15 @@
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/product.css">
 </head>
 <body>
     <?php include('./header.php') ?>
     <main>
         <section class="all_product">
-            <div class="category">
-                <a href="#">ALL</a>
+            <h1>All Product</h1>
+            <div class="tab_title category">
+                <a href="#" class="active">ALL</a>
                 <a href="#">WB</a>
                 <a href="#">DISNEY/PIXAR</a>
                 <a href="#">UNIVERSAL</a>
@@ -31,110 +33,128 @@
                 <div class="swiper-slide slide1">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best1.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
-                        <p><a href="#" class="price">5,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">해리포터 랜덤카드</h2>
+                        <p class="price">5,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide2">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best2.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">CGV 필름마크북 ver.4</a></h2>
-                        <p><a href="#" class="price">18,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">CGV 필름마크북 ver.4</h2>
+                        <p class="price">18,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide3">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best3.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">스즈메의 문단속 다이진 마그넷 세트</a></h2>
-                        <p><a href="#" class="price">27,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">스즈메의 문단속 다이진 마그넷 세트</h2>
+                        <p class="price">27,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide4">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best4.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">스즈메의 문단속 입체 마그넷</a></h2>
-                        <p><a href="#" class="price">18,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">스즈메의 문단속 입체 마그넷</h2>
+                        <p class="price">18,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide5">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best5.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">스즈메의 문단속 뱃지</a></h2>
-                        <p><a href="#" class="price">7,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">스즈메의 문단속 뱃지</h2>
+                        <p class="price">7,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide6">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best6.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">프렌즈 빈티지 노트</a></h2>
-                        <p><a href="#" class="price">5,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">프렌즈 빈티지 노트</h2>
+                        <p class="price">5,000원</p>
+                    </a>
                 </div>
                 <div class="swiper-slide slide7">
                     <div class="box">
                         <a href="#" class="item_img"><img src="./images/best7.jpg" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
+                        <a href="#" class="like_img">관심상품등록</a>
                     </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">포켓몬스터 랜덤뱃지</a></h2>
-                        <p><a href="#" class="price">10,000원</a></p>
-                    </div>
+                    <a href="#" class="txt">
+                        <h2 class="name">포켓몬스터 랜덤뱃지</h2>
+                        <p class="price">10,000원</p>
+                    </a>
                 </div>
             </div>
             <div class="swiper-scrollbar"></div>
         </div>
-        <section class="product_wrap">
-            <div class="product_t">
-                <div class="movie">
-                    <span>해리포터</span>
-                    <span>|</span>
-                    <span>프렌즈</span>
-                    <span>|</span>
-                    <span>배트맨</span>
-                    <span>|</span>
-                    <span>톰과 제리</span>
-                </div>
-                <select name="order" id="order">
-                    <option value="">최신순</option>
-                    <option value="">인기순</option>
-                    <option value="">리뷰순</option>
-                    <option value="">최고가</option>
-                    <option value="">최저가</option>
-                </select>
+        <section class="tab_contents product_wrap">
+            <div class="all">
+                <?php include('./item1.php') ?>
             </div>
-            <div class="product_contents">
-                <div class="product1">
-                    <div class="box">
-                        <a href="#" class="item_img"><img src="#" alt=""></a>
-                        <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
-                    </div>
-                    <div class="txt">
-                        <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
-                        <p><a href="#" class="price">5,000원</a></p>
-                    </div>
-                </div>
+            <div class="wb">
+                <?php include('./item2.php') ?>
+            </div>
+            <div class="disney">
+                <?php include('./item1.php') ?>
+            </div>
+            <div class="universal">
+                <?php include('./item2.php') ?>
+            </div>
+            <div class="cineshop">
+                <?php include('./item1.php') ?>
             </div>
         </section>
     </main>
     <?php include('./footer.php') ?>
     <script src="./script/common.js"></script>
+    <script>
+        const tab_title = document.querySelectorAll('.tab_title a')
+        const tab_contents = document.querySelectorAll('.tab_contents > div')
+        let like = document.querySelectorAll('.like_img')
+        const bestSlide = new Swiper('#best_slide',{
+            slidesPerView: 2,
+            direction: 'horizontal',
+            autoplay:{delay:3000},
+            speed:800,
+            loop:true,
+            scrollbar:{el:'#best_slide .swiper-scrollbar'}, // 스크롤바 표시
+            breakpoints:{
+                700:{slidesPerView:3,},
+                1100:{slidesPerView:4,},
+            },
+        })
+        for(let i of tab_contents){i.style.display = 'none'}
+        tab_contents[0].style.display = 'block'
+        tab_title.forEach(function(t,i){
+            t.addEventListener('click', function(e){
+                e.preventDefault()
+                for(let i of tab_title){i.classList.remove('active')}
+                t.classList.add('active')
+                for(let i of tab_contents){i.style.display = 'none'}
+                tab_contents[i].style.display = 'block'
+            })
+        })
+        like.addEventListener('click',function(e){
+            e.preventDefault()
+            like.classList.toggle('like_fill')
+        })
+        /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+    </script>
 </body>
 </html>
