--- a/index.html
+++ b/index.html
@@ -160,70 +160,70 @@
                             <a href="#" class="item_img"><img src="./images/best1.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">해리포터 랜덤카드</a></h2>
-                            <p><a href="#" class="price">5,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">해리포터 랜덤카드</h2>
+                            <p class="price">5,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide2">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best2.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">CGV 필름마크북 ver.4</a></h2>
-                            <p><a href="#" class="price">18,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">CGV 필름마크북 ver.4</h2>
+                            <p class="price">18,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide3">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best3.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 다이진 마그넷 세트</a></h2>
-                            <p><a href="#" class="price">27,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">스즈메의 문단속 다이진 마그넷 세트</h2>
+                            <p class="price">27,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide4">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best4.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 입체 마그넷</a></h2>
-                            <p><a href="#" class="price">18,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">스즈메의 문단속 입체 마그넷</h2>
+                            <p class="price">18,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide5">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best5.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">스즈메의 문단속 뱃지</a></h2>
-                            <p><a href="#" class="price">7,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">스즈메의 문단속 뱃지</h2>
+                            <p class="price">7,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide6">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best6.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">프렌즈 빈티지 노트</a></h2>
-                            <p><a href="#" class="price">5,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">프렌즈 빈티지 노트</h2>
+                            <p class="price">5,000원</p>
+                        </a>
                     </div>
                     <div class="swiper-slide slide7">
                         <div class="box">
                             <a href="#" class="item_img"><img src="./images/best7.jpg" alt=""></a>
                             <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                         </div>
-                        <div class="txt">
-                            <h2><a href="#" class="name">포켓몬스터 랜덤뱃지</a></h2>
-                            <p><a href="#" class="price">10,000원</a></p>
-                        </div>
+                        <a href="#" class="txt">
+                            <h2 class="name">포켓몬스터 랜덤뱃지</h2>
+                            <p class="price">10,000원</p>
+                        </a>
                     </div>
                 </div>
                 <div class="swiper-scrollbar"></div>
@@ -254,30 +254,30 @@
                                 <a href="#" class="item_img"><img src="./images/tab1_product1.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">톰과 제리 타투스티커 - 하트/치즈</a></h2>
-                                <p><a href="#" class="price">5,000원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">톰과 제리 타투스티커</h2>
+                                <p class="price">5,000원</p>
+                            </a>
                         </div>
                         <div class="item2">
                             <div class="box">
                                 <a href="#" class="item_img"><img src="./images/tab1_product2.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">톰과 제리 티셔츠 - 서핑투어/오션레이싱</a></h2>
-                                <p><a href="#" class="price">30,000원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">톰과 제리 티셔츠</h2>
+                                <p class="price">30,000원</p>
+                            </a>
                         </div>
                         <div class="item3">
                             <div class="box">
                                 <a href="#" class="item_img"><img src="./images/tab1_product3.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">톰과 제리 포스터 세트</a></h2>
-                                <p><a href="#" class="price">6,000원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">톰과 제리 포스터 세트</h2>
+                                <p class="price">6,000원</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -298,30 +298,30 @@
                                 <a href="#" class="item_img"><img src="./images/tab2_product1.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">해리포터 빈티지 스티커</a></h2>
-                                <p><a href="#" class="price">4,500원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">해리포터 빈티지 스티커</h2>
+                                <p class="price">4,500원</p>
+                            </a>
                         </div>
                         <div class="item2">
                             <div class="box">
                                 <a href="#" class="item_img"><img src="./images/tab2_product2.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like_w.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">해리포터 랜덤 뱃지</a></h2>
-                                <p><a href="#" class="price">4,000원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">해리포터 랜덤 뱃지</h2>
+                                <p class="price">4,000원</p>
+                            </a>
                         </div>
                         <div class="item3">
                             <div class="box">
                                 <a href="#" class="item_img"><img src="./images/tab2_product3.jpg" alt=""></a>
                                 <a href="#" class="like_img"><img src="./images/icon/ico_like.png" alt="관심상품등록"></a>
                             </div>
-                            <div class="txt">
-                                <h2><a href="#" class="name">해리포터 입체 마그넷</a></h2>
-                                <p><a href="#" class="price">16,200원</a></p>
-                            </div>
+                            <a href="#" class="txt">
+                                <h2 class="name">해리포터 입체 마그넷</h2>
+                                <p class="price">16,200원</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -429,33 +429,6 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="fnb_t">
-            <a href="#">회사소개</a>
-            <a href="#">이용약관</a>
-            <a href="#">개인정보 처리방침</a>
-            <a href="#">이용안내</a>
-            <a href="#">문의</a>
-            <a href="#">입점신청</a>
-        </div>
-        <div class="fnb_mid">
-            <div class="left">
-                <p><a href="#">1544 - 1122</a></p>
-                <p>CS CENTER : MON-FRI 09:00 - 18:00</p>
-            </div>
-            <div class="right">
-                <img src="./images/logo.png" alt="CINESHOP">
-                <a href="#"><img src="./images/icon/ico_instagram.png" alt="instargram"></a>
-            </div>
-        </div>
-        <div class="fnb_btm">
-            <p>
-                회사명 : CJCGV (씨제이 씨지브이) (주) 대표자 : 허민회 주소 : 서울특별시 용산구 한강대로23길 55 (한강로3가)<br>
-                사업자등록번호 : 104-81-45690 <a href="#">[사업자정보확인]</a> 통신판매업신고 : 제2017-서울용산-0662호 대표전화 : 1544-1122<br>이메일 : cgv_cineshop@cj.net 개인정보보호책임자 : <a href="#">조진호</a>
-            </p>
-            <p>COPYRIGHT ⓒ CGV 씨네샵. ALL RIGHTS RESERVED.</p>
-        </div>
-    </footer>
     <?php include('./footer.php') ?>
     <script src="./script/common.js"></script>
     <script src="./script/index.js"></script>
